[package]
name = "millegrilles_core"
version = "1.45.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.14", features = ["max_level_debug", "release_max_level_info"] }
env_logger = "0.9.0"

millegrilles_common_rust = { path = "millegrilles_common_rust" }

async-trait = "0.1.51"
tokio = { version = "1.11.0", features = ["full"] }
tokio-stream = { version = "0.1.7" }
mongodb = { version = "2.0.0", default-features = false, features = ["tokio-runtime", "bson-chrono-0_4"] }
bson = "2.0.0"
lapin = { "version" = "1.8.0" }
futures = "0.3.1"
futures-util = "0.3.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.19" }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
