[package]
name = "millegrilles_core"
version = "2022.8.1"
edition = "2021"

[dependencies]
millegrilles_common_rust = { path = "millegrilles_common_rust" }

log = { version = "0.4.14", features = ["max_level_debug", "release_max_level_info"] }
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
webauthn-rs = "0.2.5"

