[package]
name = "millegrilles_core"
version = "2024.4.0"
edition = "2021"

[dependencies]
millegrilles_common_rust = { git = "https://github.com/dugrema/millegrilles_common_rust.git", branch = "2024.4" }
# millegrilles_common_rust = { path = "/home/mathieu/RustroverProjects/millegrilles_common_rust" }

log = { version = "0.4.14", features = ["max_level_debug", "release_max_level_info"] }
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
webauthn-rs = { "version" = "0.4", "features" = ["danger-allow-state-serialisation"] }
